Fixing CMake build for Windows

--- a/rest_client/client/CMakeLists.txt
+++ b/rest_client/client/CMakeLists.txt
@@ -6,12 +6,13 @@ else ()
     set(TARGET_DIR "release")
 endif()
 
-set(CLIENT_SO "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_DIR}/libclient.${CMAKE_SHARED_LIBRARY_SUFFIX}")
+set(CLIENT_SO "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_DIR}/libclient${CMAKE_SHARED_LIBRARY_SUFFIX}")
 
+set(CARGO_TARGET_DIR ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_target(client ALL
     COMMENT "Compiling client module"
-    COMMAND CARGO_TARGET_DIR=${CMAKE_CURRENT_BINARY_DIR} ${CARGO_CMD}
-    COMMAND cp ${CLIENT_SO} ${CMAKE_CURRENT_BINARY_DIR}
+    COMMAND ${CARGO_CMD}
+    COMMAND copy ${CLIENT_SO} ${CMAKE_CURRENT_BINARY_DIR}
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 set_target_properties(client PROPERTIES LOCATION ${CMAKE_CURRENT_BINARY_DIR})
