--- a/rest_client/gui/CMakeLists.txt
+++ b/rest_client/gui/CMakeLists.txt
@@ -4,11 +4,12 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-find_package(Qt5Widgets)
+list(APPEND CMAKE_PREFIX_PATH "D:\\Qt\\6.5.1")
+find_package(Qt6Widgets)
 
 set(SOURCE main.cpp)
 add_executable(gui ${SOURCE})
 get_target_property(CLIENT_DIR client LOCATION)
-target_link_libraries(gui Qt5::Widgets)
-target_link_libraries(gui ${CLIENT_DIR}/libclient.${CMAKE_SHARED_LIBRARY_SUFFIX})
+target_link_libraries(gui Qt6::Widgets)
+# target_link_libraries(gui ${CLIENT_DIR}/libclient${CMAKE_SHARED_LIBRARY_SUFFIX})
 add_dependencies(gui client)
