Able to launch Qt Window now

--- a/rest_client/gui/CMakeLists.txt
+++ b/rest_client/gui/CMakeLists.txt
@@ -4,7 +4,8 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-list(APPEND CMAKE_PREFIX_PATH "D:\\Qt\\6.5.1\\msvc2019_64\\lib\\cmake")
+list(APPEND CMAKE_PREFIX_PATH "D:\\Qt\\6.5.1\\msvc2019_64")
+#list(APPEND CMAKE_PREFIX_PATH "D:\\Qt\\6.5.1\\msvc2019_64\\lib\\cmake")
 #list(APPEND CMAKE_PREFIX_PATH "D:\\Qt\\6.5.1\\mingw_64\\lib\\cmake")
 # list(APPEND CMAKE_PREFIX_PATH "/cygdrive/d/Qt/6.5.1")
 find_package(Qt6Widgets)
@@ -16,6 +17,10 @@ target_compile_options(gui PRIVATE "/Zc:__cplusplus")
 target_compile_options(gui PRIVATE "/permissive-")
 target_compile_options(gui PRIVATE "/Zc:wchar_t")
 get_target_property(CLIENT_DIR client LOCATION)
-target_link_libraries(gui Qt6::Widgets Qt6::Gui Qt6::Core)
-#target_link_libraries(gui ${CLIENT_DIR}/libclient${CMAKE_SHARED_LIBRARY_SUFFIX})
+target_link_libraries(gui PUBLIC Qt6::Widgets)
+#target_link_libraries(gui ${CLIENT_DIR}/client${CMAKE_SHARED_LIBRARY_SUFFIX})
 add_dependencies(gui client)
+
+#add_custom_command(TARGET client POST_BUILD
+#        COMMAND
+#        )
