--- a/rest_client/gui/CMakeLists.txt
+++ b/rest_client/gui/CMakeLists.txt
@@ -4,11 +4,16 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-list(APPEND CMAKE_PREFIX_PATH "D:\\Qt\\6.5.1\\msvc2019_64")
-#list(APPEND CMAKE_PREFIX_PATH "D:\\Qt\\6.5.1\\msvc2019_64\\lib\\cmake")
+list(APPEND CMAKE_PREFIX_PATH $ENV{QT_DIR})
 #list(APPEND CMAKE_PREFIX_PATH "D:\\Qt\\6.5.1\\mingw_64\\lib\\cmake")
 # list(APPEND CMAKE_PREFIX_PATH "/cygdrive/d/Qt/6.5.1")
 find_package(Qt6Widgets)
+
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(BUILD_SUFFIX "d")
+else ()
+    set(BUILD_SUFFIX "")
+endif()
 
 set(SOURCE main.cpp)
 add_executable(gui ${SOURCE})
@@ -18,9 +23,12 @@ target_compile_options(gui PRIVATE "/permissive-")
 target_compile_options(gui PRIVATE "/Zc:wchar_t")
 get_target_property(CLIENT_DIR client LOCATION)
 target_link_libraries(gui PUBLIC Qt6::Widgets)
-#target_link_libraries(gui ${CLIENT_DIR}/client${CMAKE_SHARED_LIBRARY_SUFFIX})
+# target_link_libraries(gui PUBLIC ${CLIENT_DIR}/client${CMAKE_SHARED_LIBRARY_SUFFIX})
 add_dependencies(gui client)
 
-#add_custom_command(TARGET client POST_BUILD
-#        COMMAND
-#        )
+# Copy the dependent dlls into the final executable directory so that the code runs.
+add_custom_command(TARGET gui POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy "$ENV{QT_DIR}\\bin\\Qt6Widgets${BUILD_SUFFIX}${CMAKE_SHARED_LIBRARY_SUFFIX}" ${CMAKE_CURRENT_BINARY_DIR}
+        COMMAND ${CMAKE_COMMAND} -E copy "$ENV{QT_DIR}\\bin\\Qt6Core${BUILD_SUFFIX}${CMAKE_SHARED_LIBRARY_SUFFIX}" ${CMAKE_CURRENT_BINARY_DIR}
+        COMMAND ${CMAKE_COMMAND} -E copy "$ENV{QT_DIR}\\bin\\Qt6Gui${BUILD_SUFFIX}${CMAKE_SHARED_LIBRARY_SUFFIX}" ${CMAKE_CURRENT_BINARY_DIR}
+        )
