Minimal code working and printing to console

--- a/rest_client/client/CMakeLists.txt
+++ b/rest_client/client/CMakeLists.txt
@@ -11,8 +11,6 @@ endif()
 set(CLIENT_SO "${CMAKE_SOURCE_DIR}/client/target/${TARGET_DIR}/client${CMAKE_SHARED_LIBRARY_SUFFIX}")
 
 # For windows, we have to decouple each of the commands into separate function calls.
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cpluscplus")
-
 set(CARGO_TARGET_DIR ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_target(client ALL
     COMMENT "Compiling client module"
@@ -26,6 +24,7 @@ MESSAGE("Current Binary Directory: ${CMAKE_CURRENT_BINARY_DIR}")
 add_custom_command(TARGET client
         POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy ${CLIENT_SO} ${CMAKE_CURRENT_BINARY_DIR}
+        COMMAND ${CMAKE_COMMAND} -E copy ${CLIENT_SO}.lib ${CMAKE_CURRENT_BINARY_DIR}
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         DEPENDS client
 )
