--- a/rest_client/client/Cargo.toml
+++ b/rest_client/client/Cargo.toml
@@ -9,6 +9,13 @@ repository = "https://gihub.com/Srikrishna31/rust_ffi_example"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+error-chain = "0.12.4"
+reqwest = "0.11.18"
+cookie = "0.17.0"
+fern = "0.6.2"
+log = "0.4.19"
+libc = "0.2.146"
+chrono = "0.4.26"
 
 [lib]
 crate-type = ["cdylib", "lib"]
