--- a/rest_client/client/Cargo.toml
+++ b/rest_client/client/Cargo.toml
@@ -10,12 +10,15 @@ repository = "https://gihub.com/Srikrishna31/rust_ffi_example"
 
 [dependencies]
 error-chain = "0.12.4"
-reqwest = "0.11.18"
+#error-chain = "0.11.0"
+reqwest = "0.9.0"
 cookie = "0.17.0"
 fern = "0.6.2"
 log = "0.4.19"
 libc = "0.2.146"
 chrono = "0.4.26"
+#tokio = {version="1.28.2", features = ["full"]}
+
 
 [lib]
 crate-type = ["cdylib", "lib"]
