--- a/rest_client/client/Cargo.toml
+++ b/rest_client/client/Cargo.toml
@@ -16,6 +16,7 @@ fern = "0.6.2"
 log = "0.4.19"
 libc = "0.2.146"
 chrono = "0.4.26"
+plugin_framework = {git = "https://github.com/Srikrishna31/plugin_framework.git"}
 
 [build-dependencies]
 cbindgen = "0.24.5"
